# libarea51-astro

./: .gitignore  APKBUILD  Makefile.in  SubMakefile.in  configure  configure.ac  configure.lineno  prebuild.sh
dependencies/: ubuntu
ephemeris/: Makefile.in  ephemeris.c  site_ephemeris  site_ephemeris.c
etc/ephemeris/: observatory
include/area51/astro/: location.h  sun.h
lib/: Makefile.in
lib/date/: calday.c  century.c  julday.c  juldayd.c  juldaytime.c  juldaytm.c  julian0h.c  mjd.c
lib/location/: init.c
lib/math/: polynomial.c  range.c
lib/sun/: sunpos.c  sunradec.c  sunriseset.c
lib/time/: siderial_greenwich.c
nbproject/: configurations.xml  project.xml
package/debian/: control.in
